<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".MainActivity">

        <TextView
            style="@style/TextAppearance.Headline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_balance_header"
            android:text="@string/my_balances"
            android:layout_marginTop="@dimen/margin_top_medium"
            android:layout_marginStart="@dimen/margin_start"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ll_balance"
            android:layout_marginTop="@dimen/margin_top_medium"
            android:layout_marginStart="@dimen/margin_start"
            android:layout_marginEnd="@dimen/margin_end"
            android:weightSum="3"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="@id/tv_balance_header"
            app:layout_constraintTop_toBottomOf="@id/tv_balance_header">

            <TextView
                style="@style/TextAppearance.Body"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/tv_balance_eur"
                tools:text="1000.00 EUR"/>

            <TextView
                style="@style/TextAppearance.Body"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/tv_balance_usd"
                tools:text="0 USD"/>

            <TextView
                style="@style/TextAppearance.Body"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight = "1"
                android:id="@+id/tv_balance_bgn"
                tools:text="0 BGN"/>

        </LinearLayout>

        <TextView
            style="@style/TextAppearance.Headline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_currency_exchange_header"
            android:text="@string/currency_exchange"
            android:layout_marginTop="@dimen/margin_top_medium"
            android:layout_marginStart="@dimen/margin_start"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ll_balance" />

        <ImageView
            android:id="@+id/ic_sell"
            android:layout_width="@dimen/item_size"
            android:layout_height="@dimen/item_size"
            android:layout_marginTop="@dimen/margin_top"
            app:layout_constraintStart_toStartOf="@+id/tv_currency_exchange_header"
            app:layout_constraintTop_toBottomOf="@+id/tv_currency_exchange_header"
            android:src="@drawable/baseline_arrow_circle_up_24"
            tools:ignore="ContentDescription"/>

        <TextView
            style="@style/TextAppearance.Body"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_sell"
            android:text="@string/sell"
            android:layout_marginStart="@dimen/margin_start"
            app:layout_constraintStart_toEndOf="@+id/ic_sell"
            app:layout_constraintTop_toTopOf="@+id/ic_sell"
            app:layout_constraintBottom_toBottomOf="@+id/ic_sell"/>

        <Spinner
            android:id="@+id/sp_sell_currency"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/item_size"
            android:layout_marginEnd="@dimen/margin_end"
            android:entries="@array/currencies"
            app:layout_constraintTop_toTopOf="@+id/ic_sell"
            app:layout_constraintBottom_toBottomOf="@+id/ic_sell"
            app:layout_constraintEnd_toEndOf="parent"/>

        <EditText
            style="@style/TextAppearance.EditText"
            android:id="@+id/et_sell_currency"
            android:layout_width="@dimen/edit_text_item_size"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_end"
            android:textColor="@color/black"
            android:importantForAutofill="no"
            app:layout_constraintTop_toTopOf="@+id/ic_sell"
            app:layout_constraintBottom_toBottomOf="@+id/ic_sell"
            app:layout_constraintEnd_toStartOf="@+id/sp_sell_currency"
            tools:ignore="LabelFor" />

        <View
            android:id="@+id/view_separator1"
            android:layout_width="0dp"
            android:layout_height="0.5dp"
            android:layout_marginTop="@dimen/margin_top"
            android:layout_marginStart="@dimen/margin_start"
            android:background="@color/grey_light"
            app:layout_constraintTop_toBottomOf="@+id/tv_sell"
            app:layout_constraintStart_toEndOf="@+id/ic_sell"/>

        <ImageView
            android:id="@+id/ic_receive"
            android:layout_width="@dimen/item_size"
            android:layout_height="@dimen/item_size"
            android:layout_marginTop="@dimen/margin_top_medium"
            app:layout_constraintStart_toStartOf="@+id/tv_currency_exchange_header"
            app:layout_constraintTop_toBottomOf="@+id/ic_sell"
            android:src="@drawable/baseline_arrow_circle_down_24"
            tools:ignore="ContentDescription"/>

        <TextView
            style="@style/TextAppearance.Body"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_receive"
            android:text="@string/receive"
            android:layout_marginStart="@dimen/margin_start"
            app:layout_constraintStart_toEndOf="@+id/ic_receive"
            app:layout_constraintTop_toTopOf="@+id/ic_receive"
            app:layout_constraintBottom_toBottomOf="@+id/ic_receive"/>

        <EditText
            style="@style/TextAppearance.EditText"
            android:id="@+id/et_receive_currency"
            android:layout_width="@dimen/edit_text_item_size"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_end"
            android:textColor="@color/green"
            android:importantForAutofill="no"
            android:contentDescription="@null"
            app:layout_constraintTop_toTopOf="@+id/ic_receive"
            app:layout_constraintBottom_toBottomOf="@+id/ic_receive"
            app:layout_constraintEnd_toStartOf="@+id/sp_sell_currency"
            tools:ignore="LabelFor" />

        <Spinner
            android:id="@+id/sp_receive_currency"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/item_size"
            android:layout_marginEnd="@dimen/margin_end"
            android:entries="@array/currencies"
            app:layout_constraintTop_toTopOf="@+id/ic_receive"
            app:layout_constraintBottom_toBottomOf="@+id/ic_receive"
            app:layout_constraintEnd_toEndOf="parent"/>

        <View
            android:id="@+id/view_separator2"
            android:layout_width="0dp"
            android:layout_height="0.5dp"
            android:layout_marginTop="@dimen/margin_top"
            android:background="@color/grey_light"
            app:layout_constraintTop_toBottomOf="@+id/tv_receive"
            app:layout_constraintStart_toStartOf="@+id/tv_receive"/>

        <Button
            style="@style/TextAppearance.Button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/bt_submit"
            android:layout_marginStart="@dimen/margin_start"
            android:layout_marginEnd="@dimen/margin_start"
            android:layout_marginTop="@dimen/margin_top_large"
            android:layout_marginBottom="@dimen/margin_bottom_large"
            android:text="@string/submit"
            android:background="@drawable/rounded_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sp_receive_currency" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>